# googletest-ndk-example

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Foo.cpp  Foo.h  native-lib.cpp  test.cpp
app/src/main/java/sonicdebris/gtestexample/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
